Refactor client directory for experiment with Github API

--- a/client/bower.json
+++ b/client/bower.json
@@ -9,6 +9,7 @@
   "moduleType": [],
   "license": "MIT",
   "dependencies": {
-    "backbone": "~1.2.3"
+    "backbone": "~1.2.3",
+    "jquery": "~2.1.4"
   }
 }
