--- a/client/bower.json
+++ b/client/bower.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "backbone": "~1.2.3",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "mocha": "~2.3.3",
+    "chai": "~3.4.1"
   }
 }
