--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
   ],
   "dependencies": {
     "backbone": "~1.2.3",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "jquery": "~2.1.4"
   },
   "devDependencies": {
     "mocha": "~2.3.3",
