--- a/.bowerrc
+++ b/.bowerrc
@@ -1,5 +1,5 @@
 {
-  "directory": "./public/bower_components",
+  "directory": "public/bower_components",
   "json": "bower.json",
   "searchpath": [
   "https://bower.herokuapp.com"
