--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "",
   "license": "ISC",
+  "cacheDirectories": ["node_modules", "public/bower_components", "public/build" ],
   "dependencies": {
     "body-parser": "^1.14.1",
     "bower": "^1.6.5",
