(fix) change gitignore

--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.4",
+    "jquery": "jQuery#~2.1.4",
     "backbone": "~1.2.3",
     "underscore": "~1.8.3"
   },
