--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "",
   "license": "ISC",
-  "cacheDirectories": ["node_modules", "public/bower_components", "public/build" ],
+  "cacheDirectories": ["node_modules", "public/bower_components"],
   "dependencies": {
     "body-parser": "^1.14.1",
     "bower": "^1.6.5",
