--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
   },
   "author": "",
   "license": "ISC",
-  "cacheDirectories": ["node_modules", "public/bower_components"],
+  "cacheDirectories": [
+    "node_modules",
+    "public/bower_components"
+  ],
   "dependencies": {
     "body-parser": "^1.14.1",
     "bower": "^1.6.5",
     "express": "^4.13.3",
     "mongoose": "^4.2.5",
+    "passport": "^0.3.2",
+    "passport-github2": "^0.1.9",
     "socket.io": "^1.3.7"
   }
 }
