--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^4.2.5",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.9",
+    "request": "^2.65.0",
     "socket.io": "^1.3.7"
   }
 }
