(fix) resolve merge conflict

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.14.1",
     "bower": "^1.6.5",
     "express": "^4.13.3",
+    "express-session": "^1.12.1",
     "mongoose": "^4.2.5",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.9",
