--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.13.3",
     "react": "0.14.6",
     "react-dom": "0.14.6",
+    "react-redux": "4.4.0",
+    "redux": "3.3.1",
     "socket.io": "^1.3.7"
   },
   "devDependencies": {
