Clean up comments and add style.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 ### node etc ###
 
+# env
+.env
+
 # Logs
 logs
 *.log
@@ -22,6 +25,7 @@ coverage
 build/
 dist/
 public/bundle.js
+
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
