--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "dotenv": "2.0.0",
+    "es6-promise": "3.1.2",
     "express": "^4.13.3",
     "express-session": "1.13.0",
+    "isomorphic-fetch": "2.2.1",
     "passport": "0.3.2",
     "passport-github2": "0.1.10",
     "react": "0.14.6",
     "react-dom": "0.14.6",
     "react-redux": "4.4.0",
     "redux": "3.3.1",
+    "redux-thunk": "2.0.1",
     "request": "2.69.0",
     "socket.io": "^1.3.7"
   },
@@ -33,6 +36,7 @@
     "eslint": "1.10.3",
     "eslint-config-airbnb": "3.1.0",
     "eslint-plugin-react": "3.15.0",
+    "redux-logger": "2.6.1",
     "webpack": "1.12.11"
   }
 }
