--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "body-parser": "^1.14.1",
+    "connect-redis": "3.0.2",
     "dotenv": "2.0.0",
     "es6-promise": "3.1.2",
     "express": "^4.13.3",
