--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "0.14.6",
     "react-dom": "0.14.6",
     "react-redux": "4.4.0",
+    "react-router": "2.0.1",
     "redux": "3.3.1",
     "redux-thunk": "2.0.1",
     "request": "2.69.0",
