--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.13.3",
     "express-session": "1.13.0",
     "isomorphic-fetch": "2.2.1",
+    "mongoose": "4.4.8",
     "passport": "0.3.2",
     "passport-github2": "0.1.10",
     "react": "0.14.6",
